--- a/Bulky_MVC/appsettings.json
+++ b/Bulky_MVC/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    //"DefaultConnection": "Server=172.17.0.2:3306;Database=Bulky;Trusted_Connection=True;TrustServerCertificate=True",
+    "DefaultConnection": "Server=172.17.0.2;Port=3306;User=root;Password=root;Database=Bulky;"
+
+  }
 }
