add migration for db

--- a/Bulky_MVC/appsettings.json
+++ b/Bulky_MVC/appsettings.json
@@ -7,8 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    //"DefaultConnection": "Server=172.17.0.2:3306;Database=Bulky;Trusted_Connection=True;TrustServerCertificate=True",
-    "DefaultConnection": "Server=172.17.0.2;Port=3306;User=root;Password=root;Database=Bulky;"
-
+    // "DefaultConnection": "Server=.;Database=Bulky;Trusted_Connection=True;TrustServerCertificate=True"
+    "DefaultConnection": "Server=localhost;Database=Bulky;User=root;Password=root;"
   }
 }
