Add Identity .NET

--- a/Bulky_MVC/appsettings.json
+++ b/Bulky_MVC/appsettings.json
@@ -7,7 +7,7 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    // "DefaultConnection": "Server=.;Database=Bulky;Trusted_Connection=True;TrustServerCertificate=True"
-    "DefaultConnection": "Server=localhost;Database=Bulky;User=root;Password=root;"
+    "DefaultConnection": "Server=localhost;Database=Bulky;User=root;Password=root;",
+    "ApplicationDbContextConnection": "Server=(localdb)\\mssqllocaldb;Database=BulkyBookWeb;Trusted_Connection=True;MultipleActiveResultSets=true"
   }
 }
